--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,11 @@
 		"mikey179/vfsstream": "1.6.*",
 		"phpunit/phpunit": "8.5.*"
 	},
+	"autoload": {
+		"psr-4": {
+			"Api\\": "app/"
+		}
+	},
 	"autoload-dev": {
 		"psr-4": {
 			"Tests\\Support\\": "tests/_support"
